third_party/move/move-compiler-v2/tests/checking/typing/bad_type_argument_arity_struct_pack.exp

Diagnostics:
error: expected 1 type argument but 0 were provided
  ┌─ tests/checking/typing/bad_type_argument_arity_struct_pack.move:7:9
  │
7 │         S<> { f: 0 };
  │         ^

error: expected 1 type argument but 2 were provided
  ┌─ tests/checking/typing/bad_type_argument_arity_struct_pack.move:8:9
  │
8 │         S<u64, u64> { f: 0 };
  │         ^
